--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcsh 'South African War, 1899-1902 -- Regimental histories -- Great Britain'
 - !lcc 'DT'
 - !lcsh 'Great Britain. Army. Royal Sussex Regiment'
+- GITenberg
 title: 'Two Years on Trek: Being Some Account of the Royal Sussex Regiment in South
   Africa'
 url: http://www.gutenberg.org/ebooks/35061
